test/testdata/classes/methods/instance/unused_parameter_error.lox
class Foo {
  // error: z has been declared but is never used
  add(x, y, z) {
    print x + y;
  }
}
